--- a/public/about.html
+++ b/public/about.html
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <p></p>
         <div class="bottom-grids">
             <div class="col-md-6 bottom-grid">
-                <img src="../images/barber-tools.jpg" alt=""/>
+                <img src="../images/barber-tools%20.jpg" alt=""/>
             </div>
 
             <div class="col-md-6 bottom-grid">
