--- a/public/gallery.html
+++ b/public/gallery.html
@@ -90,39 +90,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						});
 			</script>
 				<div class="view view-seventh">
-                    <a href="../images/b7.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b7.jpg" alt="" class="img-responsive">
+                    <a href="../images/18.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/18.jpg" alt="" class="img-responsive">
                     </a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="../images/b8.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b8.jpg" alt="" class="img-responsive">
+                    <a href="../images/19.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/19.jpg" alt="" class="img-responsive">
                     </a>
                 </div>
                 <div class="view view-seventh">
-                    <a href="../images/b6.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b6.jpg" alt="" class="img-responsive">
-                    </a>
-                </div>
-				<div class="view view-seventh">
-                    <a href="../images/b1.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b1.jpg" alt="" class="img-responsive">
-                    </a>
-                </div>
-                <div class="view view-seventh">
-                    <a href="../images/b2.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b2.jpg" alt="" class="img-responsive">
-                   </a>
-                </div>
-                <div class="view view-seventh">
-                    <a href="../images/b3.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b3.jpg" alt="" class="img-responsive">
-                    </a>
-                </div>
-                <div class="view view-seventh">
-                    <a href="../images/b4.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b4.jpg" alt="" class="img-responsive">
-                    </a>
-                </div>
-				<div class="view view-seventh">
-                    <a href="../images/b6.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b6.jpg" alt="" class="img-responsive">
-                    </a>
-                </div>
-				<div class="view view-seventh">
-                    <a href="../images/b5.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/b5.jpg" alt="" class="img-responsive">
+                    <a href="../images/20.jpg" class="b-link-stripe b-animate-go  swipebox" title="Image Title"><img src="../images/20.jpg" alt="" class="img-responsive">
                     </a>
                 </div>
 				<div class="clearfix"></div>
